--- a/Isopoh.Cryptography.Blake2b/Isopoh.Cryptography.Blake2b.csproj
+++ b/Isopoh.Cryptography.Blake2b/Isopoh.Cryptography.Blake2b.csproj
@@ -19,13 +19,13 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <AssemblyName>Isopoh.Cryptography.Blake2b</AssemblyName>
         <PackageId>Isopoh.Cryptography.Blake2b</PackageId>
-        <PackageVersion>1.1.2</PackageVersion>
+        <PackageVersion>1.1.3</PackageVersion>
         <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
         <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
         <SignAssembly>true</SignAssembly>
         <DelaySign>false</DelaySign>
-        <AssemblyOriginatorKeyFile>isopoh.pfx</AssemblyOriginatorKeyFile>
+      <PackageOutputPath>../nupkg</PackageOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
