--- a/Isopoh.Cryptography.SecureArray/Isopoh.Cryptography.SecureArray.csproj
+++ b/Isopoh.Cryptography.SecureArray/Isopoh.Cryptography.SecureArray.csproj
@@ -20,14 +20,14 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <AssemblyName>Isopoh.Cryptography.SecureArray</AssemblyName>
         <PackageId>Isopoh.Cryptography.SecureArray</PackageId>
-        <PackageVersion>1.1.2</PackageVersion>
+        <PackageVersion>1.1.3</PackageVersion>
         <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
         <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
         <SignAssembly>true</SignAssembly>
         <DelaySign>false</DelaySign>
-        <AssemblyOriginatorKeyFile>isopoh.pfx</AssemblyOriginatorKeyFile>
         <NuspecProperties>$summary$='la la la';summary='ho ho ho'</NuspecProperties>
+      <PackageOutputPath>../nupkg</PackageOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
