--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@ TestResults
 Isopoh.Cryptography.Argon2/isopoh.pfx
 Isopoh.Cryptography.Blake2b/isopoh.pfx
 Isopoh.Cryptography.SecureArray/isopoh.pfx
+.idea/
+/heikomilke.HashTest/out/
